--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="Download-btn">Download file</button>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const dbx = new Dropbox.Dropbox({ accessToken:'sl.CBSuV4nmug43vxn2dbuhZfq_riWZ0zMRUh5KUERiR0R8CRvkK29O7C6qI8UHEdHu65GDhLzjYGjRex93gBfNItKMHJtYD8WWrrKLNKxiDpMbf_B0p7hjiJb3LzmybATgFeKM3zr9r8uN' });
+            const dbx = new Dropbox.Dropbox({ accessToken:'' });
             // Upload file
             document.getElementById('Upload-btn').addEventListener('click', async () => {
                 const file = document.getElementById('file-Input').files[0];
